# pulse

./: .golangci.yml  README.md  flood.html  go.mod  go.sum  index.html
.github/workflows/: ci.yml
cmd/pulse/: commands.go  helpers.go  main.go  server.go  ui.go
internal/agent/: agent.go  filter.go  filter_test.go
internal/config/: config.go  config_test.go
internal/connect/: connectors.go  connectors_test.go
internal/llm/: client.go  client_test.go
internal/memory/: store.go  store_test.go
internal/server/: server.go
rust-core/: Cargo.toml
rust-core/src/: digest.rs  filter.rs  lib.rs  llm.rs  main.rs  memory.rs
