[package]
name = "pulse-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulse_core"
path = "src/lib.rs"

[[bin]]
name = "pulse-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
